--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Instant messaging app",
   "main": "developtest.js",
   "dependencies": {
+    "connect-session-sequelize": "^7.1.2",
     "express": "^4.17.1",
     "express-handlebars": "^6.0.1",
+    "express-session": "^1.17.2",
     "mysql2": "^2.3.3",
     "nodejs": "^0.0.0",
     "sequelize": "^6.12.0-alpha.1"
